--- a/css/main.css
+++ b/css/main.css
@@ -141,10 +141,20 @@ main {
   background: #fff;
   padding: 0; }
 
+.homepage-headline {
+  display: block;
+  font-size: 2rem;
+  font-weight: 600;
+  margin: 0 0 20px;
+  text-transform: uppercase; }
+
+a:hover {
+  text-decoration: none; }
+
 .header {
   background: #d8c895;
   display: flex;
-  padding: 10px; }
+  padding: 20px; }
   .header__logo-wrapper {
     flex: 0 0 30%; }
   .header__logo {
@@ -154,7 +164,7 @@ main {
     flex: 1 0 auto;
     text-align: right; }
     .header__info h2 {
-      margin: 0 0 20px 0;
+      margin: 0 0 10px 0;
       font-size: 1.25rem;
       font-weight: 600; }
   .header .po-box,
@@ -162,6 +172,7 @@ main {
     display: block; }
   .header .phone-number {
     margin: 10px 0 0 0;
+    font-weight: 600;
     color: #890b0b; }
 
 .nav {
@@ -174,40 +185,135 @@ main {
   .nav__list {
     display: flex; }
   .nav__link {
-    color: #890b0b;
+    color: #000;
     display: inline-block;
     padding: 5px 20px; }
+    .nav__link:hover {
+      color: #890b0b; }
   .nav__item {
-    border-right: 1px solid #333; }
+    border-right: 2px solid #890b0b; }
     .nav__item:last-of-type {
       border-right: none; }
 
-.form .form-group {
-  padding: 0 10px;
+.contact {
+  padding: 20px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center; }
-  .form .form-group span {
-    flex: 1 0 100%; }
-
-.form label {
-  flex: 1 0 auto;
-  margin-right: 10px; }
+  .contact__form {
+    width: 70%; }
+    .contact__form-field {
+      padding: 0 10px;
+      display: flex;
+      align-items: center;
+      position: relative; }
+      .contact__form-field::after {
+        content: "\f107";
+        font-size: 1rem;
+        color: #aaa;
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        transform: rotate(90deg);
+        right: 15px;
+        top: 2px;
+        padding: 0 0 2px;
+        position: absolute;
+        pointer-events: none; }
+    .contact__form-input {
+      border: none !important;
+      border-bottom: 1px solid #777 !important;
+      border-radius: 0 !important;
+      height: 40px;
+      -webkit-appearance: none;
+      -webkit-border-radius: 0px; }
+    .contact__form select {
+      padding: 3px;
+      margin: 0;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+      -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+      box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
+      background: #f8f8f8;
+      color: #888;
+      border: none;
+      outline: none;
+      display: inline-block;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      cursor: pointer; }
+  .contact label {
+    flex: 1 0 auto;
+    margin-right: 10px; }
 
 .hero__cell {
   height: 400px; }
   .hero__cell--1 {
     background: url(/dist/images/1.jpg) no-repeat; }
 
-.services {
-  padding: 10px;
-  display: grid;
-  grid-row-gap: 10px;
-  grid-column-gap: 10px;
-  grid-template-columns: repeat(24, 1fr); }
-
 .service {
   grid-column: auto/span 12;
   min-height: 200px;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  position: relative;
+  color: #fff;
+  font-size: 1.75rem; }
+  .service__wrapper {
+    padding: 10px;
+    display: grid;
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
+    grid-template-columns: repeat(24, 1fr); }
+  .service::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: #000;
+    opacity: 0.3;
+    transition: 0.3s all; }
+  .service:hover::after {
+    opacity: 0.8; }
+  .service--1 {
+    background: url(//kvlandscapes.com/wp-content/uploads/2017/04/nice-lawn.jpg) center center/cover no-repeat; }
+  .service--2 {
+    background: url(https://www.virginiagreenlawncare.com/wp-content/uploads/2015/05/20150429_3809_nightmuse_0006.jpg) center center/cover no-repeat; }
+  .service--3 {
+    background: url(https://www.grofflandscapedesign.com/wp-content/uploads/2016/09/SmallerProjects.jpg) center center/cover no-repeat; }
+  .service--4 {
+    background: url(https://gvtreeservice.com/wp-content/uploads/2016/09/tree-service.jpg) center center/cover no-repeat; }
+
+.footer {
+  background: #d8c895;
+  color: #000;
+  padding: 30px 10px;
+  text-align: center; }
+  .footer a:hover {
+    color: #890b0b;
+    text-decoration: none; }
+  .footer__links {
+    display: flex;
+    justify-content: center; }
+  .footer__link {
+    display: block;
+    margin: 0 10px;
+    color: #000; }
+  .footer__info {
+    margin: 10px 0; }
+  .footer__name {
+    font-size: 1.2rem;
+    margin: 20px 0; }
+  .footer .phone-number {
+    color: #000;
+    margin: 5px 0;
+    display: block; }
+    .footer .phone-number:hover {
+      color: #890b0b; }
