--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,9 @@ body {
   background-image: url(/dist/images/back.png);
   height: 100vh;
   font-family: "Montserrat", sans-serif; }
+  body > .container {
+    box-shadow: 0 0 12px #333;
+    padding: 0; }
 
 main {
   background: #fff;
@@ -143,13 +146,17 @@ main {
 
 .homepage-headline {
   display: block;
+  letter-spacing: 2px;
   font-size: 2rem;
   font-weight: 600;
   margin: 0 0 20px;
   text-transform: uppercase; }
 
-a:hover {
-  text-decoration: none; }
+a {
+  transition: 0.3s all; }
+  a:hover {
+    cursor: pointer;
+    text-decoration: none; }
 
 .header {
   background: #d8c895;
@@ -159,7 +166,7 @@ a:hover {
     flex: 0 0 30%; }
   .header__logo {
     display: block;
-    max-width: 100%; }
+    width: 240px; }
   .header__info {
     flex: 1 0 auto;
     text-align: right; }
@@ -176,8 +183,7 @@ a:hover {
     color: #890b0b; }
 
 .nav {
-  border-top: 1px solid #fff;
-  background: #d8c895;
+  background: #890b0b;
   display: flex;
   justify-content: center;
   padding: 10px 0;
@@ -185,13 +191,16 @@ a:hover {
   .nav__list {
     display: flex; }
   .nav__link {
-    color: #000;
+    color: #fff;
     display: inline-block;
-    padding: 5px 20px; }
+    padding: 5px 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 0.75rem; }
     .nav__link:hover {
-      color: #890b0b; }
+      color: #000; }
   .nav__item {
-    border-right: 2px solid #890b0b; }
+    border-right: 3px solid #000; }
     .nav__item:last-of-type {
       border-right: none; }
 
@@ -250,10 +259,14 @@ a:hover {
     flex: 1 0 auto;
     margin-right: 10px; }
 
-.hero__cell {
-  height: 400px; }
-  .hero__cell--1 {
-    background: url(/dist/images/1.jpg) no-repeat; }
+.hero {
+  padding: 20px 40px;
+  width: 80%;
+  margin: 0 auto; }
+  .hero__cell {
+    height: 400px; }
+    .hero__cell--1 {
+      background: url(/dist/images/1.jpg) center center/cover no-repeat; }
 
 .service {
   grid-column: auto/span 12;
@@ -294,11 +307,16 @@ a:hover {
 .footer {
   background: #d8c895;
   color: #000;
-  padding: 30px 10px;
+  padding: 30px 10px 10px;
   text-align: center; }
   .footer a:hover {
     color: #890b0b;
     text-decoration: none; }
+  .footer__logo {
+    display: block;
+    margin: 10px auto 20px; }
+    .footer__logo-img {
+      width: 225px; }
   .footer__links {
     display: flex;
     justify-content: center; }
